{
  "version": 4,
  "terraform_version": "0.15.4",
  "serial": 29,
  "lineage": "d5c8ac10-a48d-69fb-9c00-511739117a1c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02f26adf094f51167",
            "arn": "arn:aws:ec2:ap-southeast-1:624068224637:instance/i-08b35363e4b193e66",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08b35363e4b193e66",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0877199f71bec79c4",
            "private_dns": "ip-172-31-23-211.ap-southeast-1.compute.internal",
            "private_ip": "172.31.23.211",
            "public_dns": "ec2-18-141-185-144.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "18.141.185.144",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-068c65bb380295095",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "healthcaretokens-backend"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-48dc082e",
            "tags": {
              "Name": "Healthcare token backend"
            },
            "tags_all": {
              "Name": "Healthcare token backend"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08ff8978bc6675a1f"
            ]
          },
          "dependencies": [
            "aws_security_group.healthcaretokens_backend",
            "aws_security_group.healthcaretokens_web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "hospital_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02f26adf094f51167",
            "arn": "arn:aws:ec2:ap-southeast-1:624068224637:instance/i-037a827e71b8b1216",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-037a827e71b8b1216",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-01c7ae9bcbf9674a1",
            "private_dns": "ip-172-31-17-152.ap-southeast-1.compute.internal",
            "private_ip": "172.31.17.152",
            "public_dns": "ec2-52-221-201-181.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "52.221.201.181",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05a6dea43cef76a79",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "healthcaretokens-web"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-48dc082e",
            "tags": {
              "Name": "Hospital web app"
            },
            "tags_all": {
              "Name": "Hospital web app"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-073b1c0fb2e69f8c2"
            ]
          },
          "dependencies": [
            "aws_security_group.healthcaretokens_web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nhso_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02f26adf094f51167",
            "arn": "arn:aws:ec2:ap-southeast-1:624068224637:instance/i-03ff1c5600093bb05",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03ff1c5600093bb05",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-03a68df2f09246a64",
            "private_dns": "ip-172-31-18-199.ap-southeast-1.compute.internal",
            "private_ip": "172.31.18.199",
            "public_dns": "ec2-18-141-146-170.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "18.141.146.170",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-079c457a531b8b009",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "healthcaretokens-web"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-48dc082e",
            "tags": {
              "Name": "NHSO web app"
            },
            "tags_all": {
              "Name": "NHSO web app"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-073b1c0fb2e69f8c2"
            ]
          },
          "dependencies": [
            "aws_security_group.healthcaretokens_web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "healthcaretokens_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:624068224637:security-group/sg-08ff8978bc6675a1f",
            "description": "Security group for healthcare token",
            "egress": [],
            "id": "sg-08ff8978bc6675a1f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-073b1c0fb2e69f8c2"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "healthcaretokens-backend",
            "name_prefix": "",
            "owner_id": "624068224637",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-37759551"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.healthcaretokens_web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "healthcaretokens_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:624068224637:security-group/sg-073b1c0fb2e69f8c2",
            "description": "Security group for healthcare token",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-073b1c0fb2e69f8c2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "healthcaretokens-web",
            "name_prefix": "",
            "owner_id": "624068224637",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-37759551"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}